--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>数独解算器-Sudoku Solver</title>
   </head>
-  <body class="bg-gray-300">
-    <h1 class="text-3xl text-center m-4 items-center">
-      <img src="./logo.svg" class="h-10 inline"/>
+  <body class="bg-gray-300 h-[100vh] flex flex-col justify-top items-center">
+    <h1 class="text-xl text-center py-4 items-center">
+      <img src="./logo.svg" class="h-6 inline"/>
       数独解算器
     </h1>
-    <div id="root"></div>
+    <div id="root" class="flex-grow"></div>
+    <footer class="text-sm m-2">Vectors and icons by <a class="text-blue-800 " href="https://www.svgrepo.com" target="_blank">SVG Repo</a></footer>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
